--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "rippleui": "^1.12.1"
+    "rippleui": "^1.12.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "daisyui": "^4.11.1",
