--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "form-data": "^4.0.0",
     "next": "14.2.3",
+    "next-cookies": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "rippleui": "^1.12.1",
+    "swr": "^2.2.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
