--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-cookies": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "rippleui": "^1.12.1",
     "swr": "^2.2.5",
     "zustand": "^4.5.2"
