--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "axios": "^1.7.2",
     "form-data": "^4.0.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "next-cookies": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
     "rippleui": "^1.12.1",
+    "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "zustand": "^4.5.2"
   },
